fix: dark mode toggle responsiveness

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -168,3 +168,10 @@
   gap: 10px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 1080px) {
+  .dark-mode-toggle {
+    padding: 20px 0 0 0;
+    justify-content: start;
+  }
+}
